--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');
 html {
   font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
   box-sizing: border-box;
@@ -6,9 +7,7 @@ body {
   margin: 0;
   height: 100vh;
   font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Poppins', sans-serif;
 }
 #root {
   height: 100%;
@@ -27,11 +26,12 @@ body {
 }
 header {
   grid-area: header;
-  background-color: #203040;
+  background-color: whitesmoke;
+  padding: 2rem;
 }
 main {
   grid-area: main;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 footer {
   grid-area: footer;
@@ -45,14 +45,17 @@ h1 {
 }
 h2 {
   font-size: 1.6rem;
-  padding: 1rem 0;
+  margin: 0;
+  /* padding: 1rem 0; */
 }
 
 a {
   text-decoration: none;
+  color:  black;
+  transition: .3s;
 }
 a:hover {
-  color: #ff8000;
+  color: rgb(99, 97, 97);
 }
 ul {
   padding: 0;
@@ -68,7 +71,7 @@ textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
-  border: 0.1rem #a4a4a4 solid;
+  border: 0.2rem #e0e0e0 solid;
   font-size: 1.6rem;
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -85,18 +88,19 @@ input:hover,
 select:hover,
 textarea:hover,
 button:hover {
-  border: 0.1rem #404040 solid;
+  border: 0.2rem #b9b9b9 solid;
 }
 
 button.primary {
-  background-color: #f0c040;
+  background-color: #212121;
+  color: white;
 }
 button.block {
   width: 100%;
 }
 /* Header */
 header a {
-  color: #ffffff;
+  color: #212121;
   padding: 1rem;
 }
 a.brand {
@@ -108,7 +112,7 @@ a.brand {
   background-color: #f02020;
   color: #ffff;
   border-radius: 50%;
-  padding: .2rem;
+  padding: .2rem .5rem;
   font-size: 1.4rem;
   margin-left: .2rem;
 }
@@ -134,6 +138,43 @@ a.brand {
   min-width: 30rem;
 }
 
+/* Aside */
+aside {
+  position: fixed;
+  width: 30rem;
+  height: 100%;
+  background-color: #efefef;
+  z-index: 1000;
+  transform: translateX(-30rem);
+  transition: all 0.5s;
+}
+aside.open {
+  transform: translateX(0);
+}
+button.open-sidebar {
+  font-size: 3rem;
+  padding: 0.2rem 0.5rem;
+  margin: 0 0.5rem;
+  background: none;
+  color: #ffffff;
+  cursor: pointer;
+}
+button.open-sidebar:hover {
+  border-color: #ffffff;
+}
+aside ul {
+  padding: 0;
+  list-style: none;
+}
+aside li {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+button.close-sidebar {
+  padding: 0.3rem 0.8rem;
+}
+
 /* Image */
 img {
   border-radius: 0.5rem;
@@ -143,8 +184,9 @@ img.small {
   width: 100%;
 }
 img.medium {
-  max-width: 29rem;
+  max-width: 15rem;
   width: 100%;
+  min-height: 150px;
 }
 img.large {
   width: 100%;
@@ -152,19 +194,19 @@ img.large {
 
 /* Card */
 .card {
-  border: 0.1rem #c0c0c0 solid;
-  background-color: #f8f8f8;
+  /* border: 0.1rem #c0c0c0 solid; */
+  background-color: rgba(250, 235, 218, 0.522);
   border-radius: 0.5rem;
   margin: 1rem;
 }
 .card-body {
-  padding: 1rem;
+  padding-left: 1rem;
 }
 .card-body > * {
   margin-bottom: 0.5rem;
 }
 .price {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 /* Rating */
 .rating span {
@@ -224,19 +266,21 @@ img.large {
 .dropdown {
   display: inline-block;
   position: relative;
+
 }
 .dropdown-content {
   position: absolute;
   display: none;
   right: 0;
-  min-width: 12rem;
+  min-width: 15rem;
   padding: 1rem;
   z-index: 1;
-  background-color: #203040;
+  background-color: rgb(255, 249, 249);
   margin: 0;
   margin-top: 0.4rem;
   border-radius: 0.5rem;
 }
+
 .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -270,4 +314,56 @@ img.large {
 }
 .table button {
   margin: 0 0.2rem;
+}
+
+/* DESIGN */
+figure {
+  max-width: 25rem;
+  text-align: center;
+}
+
+/* SEARCH */
+.search button {
+  border-radius: 0 .5rem .5rem 0;
+  border-right: none;
+  margin-right: .5rem;
+}
+.search input{
+  border-radius: .5rem 0 0 .5rem;
+  border-right: none;
+  margin-left: .5rem;
+}
+/* STEVE */
+.home {
+  position: relative;
+  background: url('./img/home.jpeg');
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  padding: 8rem 0;
+  text-align: center;
+}
+
+.heading-one {
+  font-size: 5rem;
+  color: white;
+}
+.heading-product {
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+.link {
+  color: white;
+  font-size: 2rem;
+  border: 2px white solid;
+  padding: 1.5rem;
+}
+.link:hover {
+  background: white;
+  color: #9e7f64;
+}
+
+.txt-center {
+  text-align: center;
 }
