--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@
 html {
   font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 body {
   margin: 0;
@@ -336,6 +337,22 @@ figure {
 .active {
   font-weight: bold;
 }
+
+/* Pagination */
+.pagination a {
+  padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #a4a4a4 solid;
+  font-size: 1.6rem;
+  font-family: Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.pagination a.active {
+  font-weight: bold;
+}
+
 /* STEVE */
 .container {
   max-width: 1100px;
@@ -365,9 +382,7 @@ figure {
   display: flex;
   justify-content: center;
 }
-video {
- 
-}
+
 .heading-one {
   font-size: 5rem;
   color: white;
@@ -407,4 +422,52 @@ video {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+}
+.category-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.category {
+display: flex;
+position: relative;
+}
+.category::after {
+  content: '';
+  background: rgba(7, 7, 7, 0.5);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  transition: all .3s;
+  opacity: 0;
+  transition: .3s;
+}
+.category:hover::after {
+  opacity: 1;
+
+}
+.category-img {
+  max-width: 449px;
+  width: 100%;
+}
+
+.txt-cat {
+  border: 1px white solid;
+  color: white;
+  z-index: 1;
+  width: 25%;
+  padding: 1rem 0;
+  font-size: 2rem;
+}
+.txt-cat:hover {
+  color: #9e7f64;
+  background: white;
+}
+
+.justify {
+  justify-content: space-evenly;
 }
